force-app/src/objects/EventApi__Vendor__c.object
<CustomObject>
    <description>Vendors track the various companies that provide services related to a Event.</description>
    <fields>
        <fullName>EventApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to a CRM Account record related to the Vendor.</description>
        <inlineHelpText>Link to a CRM Account record related to the Vendor.</inlineHelpText>
        <label>CRM Account Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events (Vendors)</relationshipLabel>
        <relationshipName>Vendors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Airports__c</fullName>
        <description>Enter the nearest airport(s) for the hotel.</description>
        <inlineHelpText>Enter the nearest airport(s) for the hotel.</inlineHelpText>
        <label>Nearest Airport(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Ameneties__c</fullName>
        <description>Select the amenities that the hotel offers.</description>
        <inlineHelpText>Select the amenities that the hotel offers.</inlineHelpText>
        <label>Amenities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24-hour Gym</fullName>
                </value>
                <value>
                    <fullName>Barber Shop</fullName>
                </value>
                <value>
                    <fullName>Cigar Lounge</fullName>
                </value>
                <value>
                    <fullName>Concierge Services</fullName>
                </value>
                <value>
                    <fullName>Dry Cleaning Services</fullName>
                </value>
                <value>
                    <fullName>Full Service Spa</fullName>
                </value>
                <value>
                    <fullName>Gift Shop</fullName>
                </value>
                <value>
                    <fullName>Hair Salon</fullName>
                </value>
                <value>
                    <fullName>HDTV</fullName>
                </value>
                <value>
                    <fullName>Indoor Pool(s)</fullName>
                </value>
                <value>
                    <fullName>Laundry Services</fullName>
                </value>
                <value>
                    <fullName>Outdoor Pool(s)</fullName>
                </value>
                <value>
                    <fullName>Restaurant(s)</fullName>
                </value>
                <value>
                    <fullName>Shoe Shine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__City__c</fullName>
        <description>Enter the city/province used to send payment.</description>
        <inlineHelpText>Enter the city/province used to send payment.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Concierge_Phone__c</fullName>
        <description>Enter the phone number for the hotel&apos;s concierge.</description>
        <inlineHelpText>Enter the phone number for the hotel&apos;s concierge.</inlineHelpText>
        <label>Concierge Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EventApi__Contact_Email__c</fullName>
        <description>** System Calculated Override ** Contact email for the Vendor. Derived from the related Primary Contact if defined.</description>
        <inlineHelpText>** System Calculated Override ** Contact email for the Vendor. Derived from the related Primary Contact if defined.</inlineHelpText>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EventApi__Contact_Name__c</fullName>
        <description>Enter the full name of the primary contact.</description>
        <inlineHelpText>Enter the full name of the primary contact.</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Contact_Phone__c</fullName>
        <description>Enter the primary contact&apos;s preferred phone number.</description>
        <inlineHelpText>Enter the primary contact&apos;s preferred phone number.</inlineHelpText>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EventApi__Contact_Title__c</fullName>
        <description>Enter the title of the primary contact.</description>
        <inlineHelpText>Enter the title of the primary contact.</inlineHelpText>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Country__c</fullName>
        <description>The country used to send payment.</description>
        <inlineHelpText>The country used to send payment.</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Description__c</fullName>
        <description>Optional description for the Vendor.</description>
        <inlineHelpText>Optional description for the Vendor.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Double_Room_Rate__c</fullName>
        <description>Estimated daily rate for a double room at the hotel.</description>
        <inlineHelpText>Estimated daily rate for a double room at the hotel.</inlineHelpText>
        <label>Double Room Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related Event.</description>
        <inlineHelpText>Link to the related Event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Vendors</relationshipLabel>
        <relationshipName>Vendors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Executive_Suite_Rate__c</fullName>
        <description>Estimated daily rate for a executive suite at the hotel.</description>
        <inlineHelpText>Estimated daily rate for a executive suite at the hotel.</inlineHelpText>
        <label>Executive Suite Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Family_Room_Rate__c</fullName>
        <description>Estimated daily rate for a family/triple room at the hotel.</description>
        <inlineHelpText>Estimated daily rate for a family/triple room at the hotel.</inlineHelpText>
        <label>Triple/Family Room Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Front_Desk_Phone__c</fullName>
        <description>Enter the front desk phone number for the hotel.</description>
        <inlineHelpText>Enter the front desk phone number for the hotel.</inlineHelpText>
        <label>Front Desk Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EventApi__Hotel_Ameneties_Description__c</fullName>
        <description>Describe the various amenities the hotel offers.</description>
        <inlineHelpText>Describe the various amenities the hotel offers.</inlineHelpText>
        <label>Hotel Amenities Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Hotel_Cancellation_Policy__c</fullName>
        <description>Describe the hotel&apos;s cancellation policy.</description>
        <inlineHelpText>Describe the hotel&apos;s cancellation policy.</inlineHelpText>
        <label>Hotel Cancellation Policy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Hotel_Type__c</fullName>
        <description>** Conditionally Required ** Select the most appropriate type for the hotel. Required for all &quot;Hotel&quot; vendors.</description>
        <inlineHelpText>** Conditionally Required ** Select the most appropriate type for the hotel. Required for all &quot;Hotel&quot; vendors.</inlineHelpText>
        <label>Hotel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>Economy full service</fullName>
                </value>
                <value>
                    <fullName>Economy limited service</fullName>
                </value>
                <value>
                    <fullName>Economy resort</fullName>
                </value>
                <value>
                    <fullName>Extended stay</fullName>
                </value>
                <value>
                    <fullName>Full service</fullName>
                </value>
                <value>
                    <fullName>Historic inn</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Luxury resort</fullName>
                </value>
                <value>
                    <fullName>Motel</fullName>
                </value>
                <value>
                    <fullName>Timeshare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display on the vendor page published on the event&apos;s website (if applicable).</description>
        <inlineHelpText>Display on the vendor page published on the event&apos;s website (if applicable).</inlineHelpText>
        <label>Publish to Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Local_Attractions__c</fullName>
        <description>Describe any local or historic attractions that are close to the hotel.</description>
        <inlineHelpText>Describe any local or historic attractions that are close to the hotel.</inlineHelpText>
        <label>Local/Historic Attractions</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Logo_Image_URL__c</fullName>
        <description>Secure (&quot;https://&quot;) location of a logo image to use for the Vendor on the event website (if applicable) and/or printed materials related to the event.</description>
        <inlineHelpText>Secure (&quot;https://&quot;) location of a logo image to use for the Vendor on the event website (if applicable) and/or printed materials related to the event.</inlineHelpText>
        <label>Logo Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Number_of_Rooms__c</fullName>
        <description>The number of rooms for the hotel.</description>
        <inlineHelpText>The number of rooms for the hotel.</inlineHelpText>
        <label>Number of Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Phone__c</fullName>
        <description>** System Calculated Override ** Contact phone for the Vendor. Derived from the related Primary Contact if defined.</description>
        <inlineHelpText>** System Calculated Override ** Contact phone for the Vendor. Derived from the related Primary Contact if defined.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EventApi__Postal_Code__c</fullName>
        <description>The zip or postal code used to send payment.</description>
        <inlineHelpText>The zip or postal code used to send payment.</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Preferred_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Vendor should be considered the &quot;Preffered Vendor&quot;. Best practice would be to limit the &quot;Preffered Vendor&quot; attribute to one Vendor per Vendor Category defined for an Event. Defaults unchecked.</description>
        <inlineHelpText>When checked, the Vendor should be considered the &quot;Preffered Vendor&quot;. Best practice would be to limit the &quot;Preffered Vendor&quot; attribute to one Vendor per Vendor Category defined for an Event. Defaults unchecked.</inlineHelpText>
        <label>Preferred Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Room_Rates_Description__c</fullName>
        <description>Describe the rates and room options for the hotel.</description>
        <inlineHelpText>Describe the rates and room options for the hotel.</inlineHelpText>
        <label>Room Rate(s) Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Single_Room_Rate__c</fullName>
        <description>Estimated daily rate for a single room at the hotel.</description>
        <inlineHelpText>Estimated daily rate for a single room at the hotel.</inlineHelpText>
        <label>Single Room Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Special_Discount_Information__c</fullName>
        <description>Describe any event discounts the vendor is offering as a special/promotion for event attendees.</description>
        <inlineHelpText>Describe any event discounts the vendor is offering as a special/promotion for event attendees.</inlineHelpText>
        <label>Special Discount Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Standard_Suite_Rate__c</fullName>
        <description>Estimated daily rate for a standard suite at the hotel.</description>
        <inlineHelpText>Estimated daily rate for a standard suite at the hotel.</inlineHelpText>
        <label>Standard Suite Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__State__c</fullName>
        <description>Enter the state or province used to send payment.</description>
        <inlineHelpText>Enter the state or province used to send payment.</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Street__c</fullName>
        <description>The mailing street address used to send payment.</description>
        <inlineHelpText>The mailing street address used to send payment.</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Type__c</fullName>
        <description>** Required ** The Type of Vendor is used to categorize and plan for an Event&apos;s Budget.</description>
        <inlineHelpText>** Required ** The Type of Vendor is used to categorize and plan for an Event&apos;s Budget.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Car Rental Company</fullName>
                </value>
                <value>
                    <fullName>Catering Service Provider</fullName>
                </value>
                <value>
                    <fullName>Equipment Rental Company</fullName>
                </value>
                <value>
                    <fullName>Event Planner</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Venue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Vendor_Number__c</fullName>
        <description>** Unique Case Insensitive ** Enter a code for the vendor for batch expense entry.</description>
        <externalId>true</externalId>
        <inlineHelpText>** Unique Case Insensitive ** Enter a code for the vendor for batch expense entry.</inlineHelpText>
        <label>Vendor Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EventApi__Walking_Distance_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box if the hotel is within walking distance to the event.</description>
        <inlineHelpText>Check the box if the hotel is within walking distance to the event.</inlineHelpText>
        <label>Walking Distance to Event</label>
        <type>Checkbox</type>
    </fields>
    <label>Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>